# esp32c3-rust-mqtt

./: .env.sample  .gitignore  Cargo.toml  README.md  flake.nix  mosquitto.conf  rust-toolchain.toml  test.sh
.cargo/: config.toml
.github/workflows/: build.yml
.helix/: languages.toml
src/: main.rs
