[package]
name = "esp32c3-rust-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7", features = [ "task-arena-size-24576" ] }
embassy-net = { version = "0.7", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "log", "dns"] }
embassy-time = { version = "0.4" }
esp-backtrace = { version = "0.16", features = ["esp32c3", "println", "panic-handler", "exception-handler" ] }
esp-hal = { version = "1.0.0-beta", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.8", features = ["esp32c3"] }
esp-println = { version = "0.14", features = ["esp32c3", "defmt-espflash"] }
esp-wifi = { version = "0.14", features = ["esp32c3", "wifi"] }
heapless = "0.8"
static_cell = "2"

rust-mqtt = { version = "0.3", default-features = false }
embassy-sync = { version = "0.7" }
esp-alloc = "0.8"
thiserror = { version = "2", default-features = false }
embassy-futures = "0.1.1"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"

[profile.release]
lto = "off"

[lints.clippy]
pedantic = "warn"
