[package]
name = "esp32c3-rust-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7", features = ["task-arena-size-24576"] }
embassy-net = { version = "0.7", features = [
  "defmt",
  "dhcpv4",
  "dns",
  "medium-ethernet",
  "proto-ipv6",
  "tcp",
  "udp",
] }
embassy-time = { version = "0.4", features = ["defmt"] }
esp-backtrace = { version = "0.17", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
esp-hal-embassy = { version = "0.9", features = ["defmt", "esp32c3"] }
esp-println = { version = "0.15", features = [
  "defmt-espflash",
  "esp32c3",
  "log-04",
] }
esp-wifi = { version = "0.15", features = ["defmt", "esp32c3", "wifi"] }
heapless = "0.8"
static_cell = "2"

rust-mqtt = { version = "0.3", default-features = false }
embassy-sync = { version = "0.7" }
esp-alloc = "0.8"
thiserror = { version = "2", default-features = false }
embassy-futures = "0.1.1"
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"

[profile.release]
lto = "off"
# true == 2
# https://doc.rust-lang.org/cargo/reference/profiles.html?#debug
debug = true

[lints.clippy]
pedantic = "warn"
